pablo_lara/session-02/exercise-02/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: exercise-02
  labels:
    app: wordpress
    tier: frontend
    track: stable
spec:
  selector:
    matchLabels:
      app: wordpress
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
        track: stable
    spec:
      containers:
      - image: bitnami/wordpress:latest
        livenessProbe:
            initialDelaySeconds: 160
            periodSeconds: 30
            httpGet:
              scheme: HTTP
              path: /wp-login.php
              port: 80
        readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            httpGet:
              scheme: HTTP
              path: /wp-login.php
              port: 80
        name: wordpress
        ports:
        - name: http-wp
          containerPort: 80
          protocol: TCP
        - name: https-wp
          containerPort: 443
          protocol: TCP
        volumeMounts:
          - name: wordpress-vol
            mountPath: /bitnami/wordpress
      volumes:
        - name: wordpress-vol
          persistentVolumeClaim:
            claimName: wordpress-pvc
